font color changes, trying to change more spacing issues.

--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,6 @@ p{
 .subheader{
 	font-family: 'Lora', serif;
 	font-size:30px;
-	margin: 30;
 	margin-bottom:0px;
 	padding-left:30px
 }
@@ -263,12 +262,12 @@ div.desc {
 
 .hidden_text{
 	margin-left:68px;
-	margin-bottom:40px;
+	margin-bottom:25px;
 	font-family: 'Lato', sans-serif;
 	font-size:14px;
 }
 
 .nodecolink{
 	text-decoration: none;
-	
+	color:black;
 }
